feat(mcast): add gpu-screen-recorder and wl-screenrec backend support

--- a/mcast/src/bashly.yml
+++ b/mcast/src/bashly.yml
@@ -6,6 +6,11 @@ flags:
 - long: --region
   short: -r
   help: Record selected region
+- long: --backend
+  short: -b
+  arg: recorder
+  allowed: [wf-recorder, wl-screenrec, gpu-screen-recorder]
+  help: Screen recorder backend to use
 - long: --output
   short: -o
   arg: directory
