--- a/mcast/src/bashly.yml
+++ b/mcast/src/bashly.yml
@@ -11,6 +11,9 @@ flags:
   arg: recorder
   allowed: [wf-recorder, wl-screenrec, gpu-screen-recorder]
   help: Screen recorder backend to use
+- long: --toggle
+  short: -t
+  help: Toggle recording on/off
 - long: --output
   short: -o
   arg: directory
